modificando agregar usuario persona con tareas incluidas

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=192.168.114.75
 DB_PORT=3306
-DB_DATABASE=encuestas
-DB_USERNAME=root
-DB_PASSWORD=up71654321
+DB_DATABASE=ajllita
+DB_USERNAME=fabricio
+DB_PASSWORD=FTorrico24
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
