fotos presidenciales y uni en emergencias, webservice

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.114.75
+DB_HOST=192.168.114.7
 DB_PORT=3306
 DB_DATABASE=ajllita
-DB_USERNAME=fabricio
-DB_PASSWORD=FTorrico24
+DB_USERNAME=usuario
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
