dockerizando phpmyadmin container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name:  registro_pedagogico_phpmyadmin
+    container_name:  control_phpmyadmin
     links:
       - db
     environment:
